# ChessImgClassifier

./: .gitignore  CMakeLists.txt  GoogLeNet.py  main.cpp  model.py  model_test.cpp  model_test.py  note.txt  pth2onnx.py  tmp.cpp  train.py  train_gpu.py
